Creating containers featured-courses and new-courses

--- a/server/views/partials/main.jade
+++ b/server/views/partials/main.jade
@@ -1,2 +1,10 @@
-h1 This is a partial
-h2 {{myVar}}
+.container
+    .jumbotron
+        h1 MultiVision
+        p Welcome to MultiVision! Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque tempus eget lorem ut ultrices. Donec bibendum sapien vel tortor efficitur tincidunt. Integer varius tincidunt efficitur. Sed vitae consectetur tellus, nec cursus magna.
+
+    .row
+        .col-md-6
+            div(ng-include="'/partials/featured-courses'")
+        .col-md-6
+            div(ng-include="'/partials/new-courses'")
