Dans les controlleurs angular : Utilisation d'un objet ViewModel et ne pas directement $scope

--- a/public/app/admin/user-list.jade
+++ b/public/app/admin/user-list.jade
@@ -1,4 +1,4 @@
 .container
     table.table
-        tr(ng-repeat="user in users")
+        tr(ng-repeat="user in userListCtrl.users")
             td {{user.firstName + " " + user.lastName}}
