--- a/public/app/account/navbar-login.jade
+++ b/public/app/account/navbar-login.jade
@@ -1,5 +1,5 @@
-.navbar-right(ng-controller="mvNavBarLoginCtrl")
-    form.navbar-form(ng-hide="identity.isAuthenticated()")
+.navbar-right(ng-controller="mvNavBarLoginCtrl as navBarLoginCtrl")
+    form.navbar-form(ng-hide="navBarLoginCtrl.identity.isAuthenticated()")
         ul.nav.navbar-nav
             li
                 a(href="/signup") Sign Up
@@ -7,16 +7,16 @@
             input.form-control(placeholder="Email", ng-model="username")
         .form-group
             input.form-control(type="password", placeholder="Password", ng-model="password")
-        button.btn.btn-primary(ng-click="signin(username, password)") Sign in
-    ul.nav.navbar-nav.navbar-right(ng-show="identity.isAuthenticated()")
+        button.btn.btn-primary(ng-click="navBarLoginCtrl.signin(username, password)") Sign in
+    ul.nav.navbar-nav.navbar-right(ng-show="navBarLoginCtrl.identity.isAuthenticated()")
         li.dropdown
             a.dropdown-toggle(href="", data-toggle="dropdown")
-                | {{identity.currentUser.firstName + " " + identity.currentUser.lastName}}
+                | {{navBarLoginCtrl.identity.currentUser.firstName + " " + navBarLoginCtrl.identity.currentUser.lastName}}
                 b.caret
             ul.dropdown-menu
-                li(ng-show="identity.currentUser.isAdmin()")
+                li(ng-show="navBarLoginCtrl.identity.currentUser.isAdmin()")
                     a(href="/admin/users") User Admin
                 li
                     a(href="/profile") Profile
                 li
-                    a(href="", ng-click="signout()") Sign Out
+                    a(href="", ng-click="navBarLoginCtrl.signout()") Sign Out
