--- a/public/app/account/profile.jade
+++ b/public/app/account/profile.jade
@@ -6,22 +6,22 @@
                     .form-group
                         label.col-md-2.control-label(for="email") Email
                         .col-md-10
-                            input.form-control(name="email", id="email", type="email", placeholder="Email", ng-model="email", required)
+                            input.form-control(name="email", id="email", type="email", placeholder="Email", ng-model="profileCtrl.email", required)
                     .form-group
                         label.col-md-2.control-label(for="fname") First Name
                         .col-md-10
-                            input.form-control(name="fname", id="fname", type="text", placeholder="First Name", ng-model="fname", required)
+                            input.form-control(name="fname", id="fname", type="text", placeholder="First Name", ng-model="profileCtrl.fname", required)
                     .form-group
                         label.col-md-2.control-label(for="lname") Last Name
                         .col-md-10
-                            input.form-control(name="lname", id="lname", type="text", placeholder="Last Name", ng-model="lname", required)
+                            input.form-control(name="lname", id="lname", type="text", placeholder="Last Name", ng-model="profileCtrl.lname", required)
                     .form-group
                         label.col-md-2.control-label(for="password") Password
                         .col-md-10
-                            input.form-control(name="password", id="password", type="password", placeholder="Password", ng-model="password")
+                            input.form-control(name="password", id="password", type="password", placeholder="Password", ng-model="profileCtrl.password")
                     .form-group
                         .col-md-10.col-md-offset-2
                             .pull-right
-                                button.btn.btn-primary(ng-click="update()", ng-disabled="signupForm.$invalid") Submit
+                                button.btn.btn-primary(ng-click="profileCtrl.update()", ng-disabled="profileForm.$invalid") Submit
                                 | &nbsp;
                                 a.btn.btn-default("/") Cancel
