--- a/public/app/courses/course-details.jade
+++ b/public/app/courses/course-details.jade
@@ -1,12 +1,12 @@
 .container
-    h1 {{course.title}}
+    h1 {{courseDetailCtrl.course.title}}
     .row
         .col-md-6
             h3(ng-show="course.featured") Featured
-            h3 Published On {{course.published | date}}
+            h3 Published On {{courseDetailCtrl.course.published | date}}
 
         .col-md-6
             .panel.panel-primary
                 .panel-heading Tags
                 .panel-body
-                    div(ng-repeat="tag in course.tags") {{tag}}
+                    div(ng-repeat="tag in courseDetailCtrl.course.tags") {{tag}}
