--- a/public/app/admin/user-list.jade
+++ b/public/app/admin/user-list.jade
@@ -1,4 +1,5 @@
 .container
     table.table
         tr(ng-repeat="user in userListCtrl.users")
-            td {{user.firstName + " " + user.lastName}}
+            td
+                a(href="/admin/update-user-roles/{{user._id}}") {{user.firstName + " " + user.lastName}}
